--- a/img/factorial.html
+++ b/img/factorial.html
@@ -11,7 +11,7 @@
     <div class="contenedor">
 
         <form action="">
-            <h2>factorial</h2>
+            <h2>Factorial</h2>
 
             <input id="numero1" type="text">
 
