--- a/img/tresvalores.html
+++ b/img/tresvalores.html
@@ -11,7 +11,7 @@
     <div class="contenedor">
 
         <form action="">
-            <h2>mostrar  el numero del medio</h2>
+            <h2>Mostrar  el numero del medio</h2>
 
             <input id="numero1" type="text">
 
