--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
     <ul>
       
       <li>factorial:<a href="/img/factorial.html">Validacion HTML</a></li>
+      <li>par o impar:<a href="/img/imparopar.html">Validacion HTML</a></li>
+      <li>numero del medio:<a href="/img/tresvalores.html">Validacion HTML</a></li>
       <li>Proyecto Web:<a href="https://workspace.google.com/intl/es-419/products/sites/?utm_source=google&utm_medium=cpc&utm_campaign=latam-T2-all-es-dr-skws-all-all-trial-e-dr-1009897-LUAC0012685&utm_content=text-ad-none-any-DEV_c-CRE_479427392577-ADGP_Hybrid%20%7C%20SKWS%20-%20MIX%20%7C%20Txt%20~%20Sites_Sitio-KWID_43700057710812384-kwd-851953476&utm_term=KW_crear%20sitio%20web-ST_crear%20sitio%20web&gclid=EAIaIQobChMI6pfKu9ny7wIVlwyRCh2B8grIEAAYASAAEgKlJPD_BwE&gclsrc=aw.ds">Plan Site </a></li>
     </ul>
     
